fix empty scrollbar problem ( update rest.css)

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -11,7 +11,10 @@
 html:focus-within {
 	scroll-behavior: smooth;
 }
-
+/* fix empty scrollbar problem  */
+html{
+	    overflow: auto;
+}
 /* Set core body defaults */
 body {
 	min-height: 100vh;
